--- a/wp-content/themes/cae/assets/scss/partials/_pages.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_pages.scss
@@ -5,7 +5,7 @@
 	}
 	width: 100%;
 	background-size:cover;
-
+	background-position:center center;
 }
 
 .hentry, .report-container {
